# random_daily_subject

./: .db_handler.py.swp  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  bot.py  build_img.sh  db_handler.py  pyproject.toml  run_container.sh  special_days.py  topics_db.py  updater.py  useful_scripts.py  weekly_topics.py
.github/workflows/: heroku.yml  python-package.yml
random_daily_subject/: bot.py  config.py  db_handler.py  logger.py  models.py  random_post.py  scheduler.py  special_days.py  tables.py  updater.py  useful_scripts.py
tests/: conftest.py  test_bot.py  test_db_handler.py  test_random_daily_subject.py  test_random_post.py  test_special_days.py
tests/topics/: holidays.json  special_days.json  topics.json
topics/: holidays.json  special_days.json  topics.json
