[tool.poetry]
name = "random_daily_subject"
version = "0.1.0"
description = ""
authors = ["dirkgentle"]

[tool.poetry.dependencies]
python = "^3.7"
praw = "^7.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
ipdb = "^0.13.3"
ipython = "^7.16.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
