[tool.poetry]
name = "random_daily_subject"
version = "0.1.0"
description = ""
authors = ["dirkgentle"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.1.0"
sqlalchemy = "^1.3.18"
apscheduler = "^3.6.3"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
black = "^19.10b0"
flake8 = "^3.8.3"
ipdb = "^0.13.3"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
